deployments/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: laa-claim-for-payment
spec:
  selector:
    app: example # this should match the pod label in deployment.yml
  ports:
    - name: https
      port: 8080
      targetPort: 8080
